--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8"/>
         <title>ScrollMark</title>
+        <link rel="stylesheet" href="style.css">
         <script type="module" src="index.js"> </script>
     </head>
     <body>
