--- a/src/manage.html
+++ b/src/manage.html
@@ -1,11 +1,11 @@
 <!doctype html>
-<html lang="en" class="popup">
+<html lang="en">
     <head>
         <meta charset="utf-8"/>
         <title>ScrollMark</title>
         <link rel="stylesheet" href="common.css">
-        <link rel="stylesheet" href="style.css">
-        <script type="module" src="index.js"> </script>
+        <link rel="stylesheet" href="manage-style.css">
+        <script type="module" src="manage.js"> </script>
     </head>
     <body>
         <div id="app"> </div>
