--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
         <title>ScrollMark</title>
         <link rel="stylesheet" href="common.css">
         <link rel="stylesheet" href="style.css">
-        <script type="module" src="index.js"> </script>
+        <script type="module" src="index.jsx"> </script>
     </head>
     <body>
         <div id="app"> </div>
