--- a/src/manage.html
+++ b/src/manage.html
@@ -5,7 +5,7 @@
         <title>ScrollMark</title>
         <link rel="stylesheet" href="common.css">
         <link rel="stylesheet" href="manage-style.css">
-        <script type="module" src="manage.js"> </script>
+        <script type="module" src="manage.jsx"> </script>
     </head>
     <body>
         <div id="app"> </div>
