Redesign the frontend

--- a/src/manage.html
+++ b/src/manage.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="manage.tsx"> </script>
     </head>
-    <body class="bg-slate-100">
+    <body class="bg-cream-200 font-body min-h-screen">
         <div id="app"> </div>
     </body>
 </html>
