--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="index.tsx"> </script>
     </head>
-    <body>
-        <div id="app" class="w-[360px] p-2"> </div>
+    <body class="bg-cream-50 font-body">
+        <div id="app" class="w-[360px] p-3"> </div>
     </body>
 </html>
