--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>ScrollMark</title>
+        <title>Mark Scroll Positions</title>
         <link rel="stylesheet" href="styles.css">
         <script type="module" src="index.tsx"> </script>
     </head>
