Improve the theme and introduce settings

--- a/src/settings.html
+++ b/src/settings.html
@@ -2,9 +2,9 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <title>Mark Scroll Positions</title>
+        <title>Mark Scroll Positions Settings</title>
         <link rel="stylesheet" href="styles.css">
-        <script type="module" src="index.tsx"> </script>
+        <script type="module" src="settings.tsx"> </script>
     </head>
     <body>
         <div id="app"> </div>
